--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-compare-slider": "^3.1.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.3",
     "swiper": "^11.2.6"
   },
   "devDependencies": {
