--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.3.5",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-compare-image": "^3.5.4",
     "react-compare-slider": "^3.1.0",
     "react-dom": "^19.0.0",
